--- a/index.html
+++ b/index.html
@@ -82,117 +82,124 @@
                     <div class="flecha1">
                         <img src="./imagens/Arrow 1.png" alt="flecha">
                     </div>
-                    <div class="cur1">
-                        <!-- <div class="cur1frtp"> -->
-                        <img src="./imagens/frame.top.left.png" alt="frame" class="cur1frtp">
-                        <!-- </div> -->
-                        <img src="./imagens/esqueleto-removebg-preview 1.png" alt="esqueleto" class="cur1img">
-                        <div class="txtcur1">
-                            <p>O <span class="higli">esqueleto humano</span> é formado por <span class="higli">206
-                                    ossos</span> . Apesar disso, os <span class="higli">bebês nascem</span> com cerca de
-                                <span class="higli">270 ossos</span>. Eles vão se fundindo <span class="higli">com ossos
-                                    maiores </span>
-                            </p>
-                            <!-- <div class="cur1frbt"> -->
-                            <!-- <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur1frbt"> -->
+                    <section id="boton2">
+                        <div class="cur1">
+                            <!-- <div class="cur1frtp"> -->
+                            <img src="./imagens/frame.top.left.png" alt="frame" class="cur1frtp">
                             <!-- </div> -->
+                            <img src="./imagens/esqueleto-removebg-preview 1.png" alt="esqueleto" class="cur1img">
+                            <div class="txtcur1">
+                                <p>O <span class="higli">esqueleto humano</span> é formado por <span class="higli">206
+                                        ossos</span> . Apesar disso, os <span class="higli">bebês nascem</span> com
+                                    cerca de
+                                    <span class="higli">270 ossos</span>. Eles vão se fundindo <span class="higli">com
+                                        ossos
+                                        maiores </span>
+                                </p>
+                                <!-- <div class="cur1frbt"> -->
+                                <!-- <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur1frbt"> -->
+                                <!-- </div> -->
+                            </div>
                         </div>
-                    </div>
-                    <div class="cur2">
-                        <!-- <div class="cur1frtp"> -->
-                        <!-- <img src="./imagens/frame.top.left.png" alt="frame" class="cur1frtp"> -->
-                        <!-- </div> -->
-                        <img src="./imagens/D_NQ_NP_616485-MLB46536026488_062021-O-removebg-preview (1) 1.png"
-                            alt="soco ingels" class="cur5img">
-                        <div class="txtcur2">
-
-                            <p>O <span class="higli">soco inglês</span> se popularizou entre as <span
-                                    class="higli">gangues</span>
-                                no decorrer dos <span class="higli">anos 70 e 80</span>, porém seu uso e porte era <span
-                                    class="higli">proibido</span> </p>
-                            <!-- <div class="cur1frbt"> -->
-                            <!-- <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur1frbt"> -->
+                        <div class="cur2">
+                            <!-- <div class="cur1frtp"> -->
+                            <!-- <img src="./imagens/frame.top.left.png" alt="frame" class="cur1frtp"> -->
                             <!-- </div> -->
+                            <img src="./imagens/D_NQ_NP_616485-MLB46536026488_062021-O-removebg-preview (1) 1.png"
+                                alt="soco ingels" class="cur5img">
+                            <div class="txtcur2">
+
+                                <p>O <span class="higli">soco inglês</span> se popularizou entre as <span
+                                        class="higli">gangues</span>
+                                    no decorrer dos <span class="higli">anos 70 e 80</span>, porém seu uso e porte era
+                                    <span class="higli">proibido</span> </p>
+                                <!-- <div class="cur1frbt"> -->
+                                <!-- <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur1frbt"> -->
+                                <!-- </div> -->
+                            </div>
+
                         </div>
-
-                    </div>
-                    <div class="cur1">
-                        <!-- <div class="cur1frtp"> -->
-                        <!-- <img src="./imagens/frame.top.left.png" alt="frame" class="cur1frtp"> -->
-                        <!-- </div> -->
-                        <img src="./imagens/images-removebg-preview 1.png" alt="pnda" class="cur1img">
-                        <div class="txtcur1">
-                            <p> <span class="higli">Pandas machos</span> competem entre si para marcar território. Eles
-                                <span class="higli">fazem xixi</span> em <span class="higli">árvores</span>, e
-                                aquele que conseguir marcar o ponto <span class="higli">mais alto</span>, ganha.
-                            </p>
-                            <!-- <div class="cur1frbt"> -->
-
-                            <!-- <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur1frbt"> -->
+                        <div class="cur1">
+                            <!-- <div class="cur1frtp"> -->
+                            <!-- <img src="./imagens/frame.top.left.png" alt="frame" class="cur1frtp"> -->
                             <!-- </div> -->
+                            <img src="./imagens/images-removebg-preview 1.png" alt="pnda" class="cur1img">
+                            <div class="txtcur1">
+                                <p> <span class="higli">Pandas machos</span> competem entre si para marcar território.
+                                    Eles
+                                    <span class="higli">fazem xixi</span> em <span class="higli">árvores</span>, e
+                                    aquele que conseguir marcar o ponto <span class="higli">mais alto</span>, ganha.
+                                </p>
+                                <!-- <div class="cur1frbt"> -->
+
+                                <!-- <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur1frbt"> -->
+                                <!-- </div> -->
+                            </div>
                         </div>
-                    </div>
-                    <div class="cur2">
-                        <!-- <div class="cur1frtp"> -->
-                        <!-- <img src="./imagens/frame.top.left.png" alt="frame" class="cur1frtp"> -->
-                        <!-- </div> -->
-                        <img src="./imagens/elefante-principais-habitos-caracteristicas-e-especies-vivas-1-removebg-preview (1) 1.png"
-                            alt="elfant" class="cur2img">
-                        <div class="txtcur2">
-
-                            <p> Todos os <span class="higli">mamíferos</span> são capazes de <span
-                                    class="higli">saltar</span>, menos os <span class="higli">elefantes</span>. </p>
-                            <!-- <div class="cur1frbt"> -->
-
-                            <!-- <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur1frbt"> -->
+                        <div class="cur2">
+                            <!-- <div class="cur1frtp"> -->
+                            <!-- <img src="./imagens/frame.top.left.png" alt="frame" class="cur1frtp"> -->
                             <!-- </div> -->
-                        </div>
-                    </div>
-                    <div class="cur1">
-                        <!-- <div class="cur1frtp"> -->
-                        <!-- <img src="./imagens/frame.top.left.png" alt="frame" class="cur1frtp"> -->
-                        <!-- </div> -->
-                        <img src="./imagens/images-removebg-preview.png" alt="mnte" class="cur3img">
-                        <div class="txtcur1">
-                            <p> <span class="higli">Estima-se</span> que, a cada <span class="higli">ano</span>, o <span
-                                    class="higli">monte Everest</span> cresça <span class="higli">4 milímetros</span>.
-                            </p>
-                            <!-- <div class="cur1frbt"> -->
+                            <img src="./imagens/elefante-principais-habitos-caracteristicas-e-especies-vivas-1-removebg-preview (1) 1.png"
+                                alt="elfant" class="cur2img">
+                            <div class="txtcur2">
 
-                            <!-- <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur1frbt"> -->
-                            <!-- </div> -->
-                        </div>
-                    </div>
-                    <div class="cur2">
-                        <!-- <div class="cur1frtp"> -->
-                        <!-- <img src="./imagens/frame.top.left.png" alt="frame" class="cur1frtp"> -->
-                        <!-- </div> -->
-                        <img src="./imagens/istockphoto-174432616-612x612-removebg-preview.png" alt="grafa"
-                            class="cur4img">
-                        <div class="txtcur2">
-                            <p> As <span class="higli">girafas</span> não possuem <span class="higli">cordas
-                            vocais</span>.</p>
-                            <!-- <div class="cur1frbt"> -->
+                                <p> Todos os <span class="higli">mamíferos</span> são capazes de <span
+                                        class="higli">saltar</span>, menos os <span class="higli">elefantes</span>. </p>
+                                <!-- <div class="cur1frbt"> -->
 
-                            <!-- <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur1frbt"> -->
-                            <!-- </div> -->
+                                <!-- <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur1frbt"> -->
+                                <!-- </div> -->
+                            </div>
                         </div>
-                    </div>
-                    <div class="cur1">
-                        <!-- <div class="cur1frtp"> -->
-                        <!-- <img src="./imagens/frame.top.left.png" alt="frame" class="cur1frtp"> -->
-                        <!-- </div> -->
-                        <img src="./imagens/VACA-1-removebg-preview.png" alt="grafa" class="cur1img">
-                        <div class="txtcur1">
-                            <p> <span class="higli">Vacas</span> não conseguem <span class="higli">subir escadas</span>,
-                                por conta de sua <span class="higli">inclinação</span>.</p>
-                            <!-- <div class="cur1frbt"> -->
+                        <div class="cur1">
+                            <!-- <div class="cur1frtp"> -->
+                            <!-- <img src="./imagens/frame.top.left.png" alt="frame" class="cur1frtp"> -->
+                            <!-- </div> -->
+                            <img src="./imagens/images-removebg-preview.png" alt="mnte" class="cur3img">
+                            <div class="txtcur1">
+                                <p> <span class="higli">Estima-se</span> que, a cada <span class="higli">ano</span>, o
+                                    <span class="higli">monte Everest</span> cresça <span class="higli">4
+                                        milímetros</span>.
+                                </p>
+                                <!-- <div class="cur1frbt"> -->
 
-                            <!-- <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur1frbt"> -->
-                            <!-- </div> -->
+                                <!-- <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur1frbt"> -->
+                                <!-- </div> -->
+                            </div>
                         </div>
-                    </div>
+                        <div class="cur2">
+                            <!-- <div class="cur1frtp"> -->
+                            <!-- <img src="./imagens/frame.top.left.png" alt="frame" class="cur1frtp"> -->
+                            <!-- </div> -->
+                            <img src="./imagens/istockphoto-174432616-612x612-removebg-preview.png" alt="grafa"
+                                class="cur4img">
+                            <div class="txtcur2">
+                                <p> As <span class="higli">girafas</span> não possuem <span class="higli">cordas
+                                        vocais</span>.</p>
+                                <!-- <div class="cur1frbt"> -->
+
+                                <!-- <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur1frbt"> -->
+                                <!-- </div> -->
+                            </div>
+                        </div>
+                        <div class="cur1">
+                            <!-- <div class="cur1frtp"> -->
+                            <!-- <img src="./imagens/frame.top.left.png" alt="frame" class="cur1frtp"> -->
+                            <!-- </div> -->
+                            <img src="./imagens/VACA-1-removebg-preview.png" alt="grafa" class="cur1img">
+                            <div class="txtcur1">
+                                <p> <span class="higli">Vacas</span> não conseguem <span class="higli">subir
+                                        escadas</span>,
+                                    por conta de sua <span class="higli">inclinação</span>.</p>
+                                <!-- <div class="cur1frbt"> -->
+
+                                <!-- <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur1frbt"> -->
+                                <!-- </div> -->
+                            </div>
+                    </section>
                 </div>
+            </div>
             </div>
         </ul>
     </header>
