--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <div class="flecha1">
                         <img src="./imagens/Arrow 1.png" alt="flecha">
                     </div>
-                    <section id="boton2">
+                    <section id="boton2"></section>
                         <div class="cur1">
                             <!-- <div class="cur1frtp"> -->
                             <img src="./imagens/frame.top.left.png" alt="frame" class="cur1frtp">
@@ -197,7 +197,7 @@
                                 <!-- <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur1frbt"> -->
                                 <!-- </div> -->
                             </div>
-                    </section>
+                    
                 </div>
             </div>
             </div>
