--- a/index.html
+++ b/index.html
@@ -191,11 +191,9 @@
                         <img src="./imagens/VACA-1-removebg-preview.png" alt="grafa" class="cur1img">
                         <div class="txtcur1">
                             <p> <span class="higli">Vacas</span> não conseguem <span class="higli">subir
-                                    escadas</span>,
-                                por conta de sua <span class="higli">inclinação</span>.</p>
+                                    escadas</span>, por conta de sua <span class="higli">inclinação</span>.</p>
                             <!-- <div class="cur1frbt"> -->
-
-                            <!-- <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur1frbt"> -->
+                            <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur2frbt">
                             <!-- </div> -->
                         </div>
 
