--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                             <p> <span class="higli">Vacas</span> não conseguem <span class="higli">subir
                                     escadas</span>, por conta de sua <span class="higli">inclinação</span>.</p>
                             <!-- <div class="cur1frbt"> -->
-                            <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur2frbp">
+                            <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur2frtp">
                             <!-- </div> -->
                         </div>
 
