--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 <body>
     <header>
         <h6>
-            <a class="boton" href="#boton">Equipe</a>
+            <a class="boton" href="#Equipe">Equipe</a>
         </h6>
         <h7>
-            <a class="boton2" href="#boton2">Curiosidades</a>
+            <a class="boton2" href="#Curiosidades">Curiosidades</a>
         </h7>
         <ul>
             <div class="titulo">
