--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <div class="flecha1">
                         <img src="./imagens/Arrow 1.png" alt="flecha">
                     </div>
-                    <section id="boton2"></section>
+                    <section id="Curiosidades"></section>
                     <div class="cur1">
                         <!-- <div class="cur1frtp"> -->
                         <img src="./imagens/frame.top.left.png" alt="frame" class="cur1frtp">
