--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         </ul>
     </header>
     <div class="final">
-        <section id="boton" class="sextion">
+        <section id="Equipe" class="sextion">
             <div>
                 <h2 class="aleatório">Aleatorista</h2>
                 <img src="./imagens/IMG_20240219_113841 1.png" alt="lorenzo">
